--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,2 @@
-argcomplete==2.0.0
-awslambdaric==2.0.4
-boto3==1.24.14
-botocore==1.27.14
-certifi==2022.6.15
-cfn-flip==1.3.0
-charset-normalizer==2.0.12
-click==8.1.3
-durationpy==0.5
-future==0.18.2
-hjson==3.0.2
-idna==3.3
-jmespath==1.0.1
-joblib==1.1.0
-kappa==0.6.0
-lightgbm==3.3.2
-numerapi==2.12.1
-numpy==1.22.4
-pandas==1.3.5
-placebo==0.9.0
-pyarrow==8.0.0
-python-dateutil==2.8.2
-python-slugify==6.1.2
-pytz==2022.1
-PyYAML==6.0
-requests==2.28.0
-s3transfer==0.6.0
-scikit-learn==1.1.1
-scipy==1.8.1
-simplejson==3.17.2
-six==1.16.0
-text-unidecode==1.3
-threadpoolctl==3.1.0
-toml==0.10.2
-tqdm==4.64.0
-troposphere==4.0.2
-urllib3==1.26.9
-Werkzeug==2.1.2
-wsgi-request-logger==0.4.6
-zappa==0.54.1
+build==0.10.0
+twine==4.0.2
