--- a/codebuild_files/Dockerfile
+++ b/codebuild_files/Dockerfile
@@ -43,6 +43,8 @@ FROM public.ecr.aws/lambda/python:${RUNTIME_VERSION}
 ARG FUNCTION_DIR
 # Set working directory to function root directory
 WORKDIR ${FUNCTION_DIR}
+RUN yum update -yqq
+RUN yum install libgomp
 # Copy in the built dependencies
 COPY --from=build-image ${FUNCTION_DIR} ${FUNCTION_DIR}
 
